# rag-document-qa

./: .env.example  .gitignore  ARCHITECTURE.md  CASE_STUDY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
scripts/: ingest_folder.py
src/: streamlit_app.py
src/rag_app/: __init__.py  api.py  config.py  embeddings.py  ingest.py  llm.py  query.py  vector_store.py
tests/: test_config.py  test_ingest.py  test_query.py
