[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-document-qa"
version = "0.1.0"
description = "RAG Document QA Chatbot with local Ollama or OpenAI LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sasidhar Mopuru", email = "sasidharmopuru@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "chromadb>=0.4.24",
    "sentence-transformers>=3.0.0",
    "openai>=1.28.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "streamlit>=1.33.0",
    "pypdf>=4.2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "flake8>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Sasireddy001/rag-document-qa"
Repository = "https://github.com/Sasireddy001/rag-document-qa"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
